# magnet-ai

./: .gitignore  README.md  config.py  main.py  pyproject.toml  tests.py
functions/: get_file_content.py  get_files_info.py  run_python_file.py  schemas.py  write_file.py
