[project]
name = "magnet-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Abderrahman YOUABD",email = "youabd50@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai (>=1.56.0,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
